@@ -1562,3 +1562,15 @@ class GetObjectBypathTests(PorcelainTestCase):
         self.assertRaises(
             KeyError,
             porcelain.get_object_by_path, self.repo, 'foo')
+
+
+class WriteTreeTests(PorcelainTestCase):
+
+    def test_simple(self):
+        fullpath = os.path.join(self.repo.path, 'foo')
+        with open(fullpath, 'w') as f:
+            f.write("BAR")
+        porcelain.add(repo=self.repo.path, paths=[fullpath])
+        self.assertEqual(
+            b'd2092c8a9f311f0311083bf8d177f2ca0ab5b241',
+            porcelain.write_tree(self.repo))
